# f_data_zone_bk

./: .gitignore  README.md  __crud.py  __pdntc_sett.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_04_29_1632-e0a6df75fbe3_initial.py  2024_05_20_1845-cdfeda1ebd25_add_extended_profiles_by_main_profile.py  2024_05_20_2026-046efa9cef42_add_to_user_new_fields_active_and_.py  2024_05_21_1651-9e4a63a21535_add_field_imap_server_to_.py
api_v1/: __init__.py
api_v1/auth/: __init__.py  crud.py  dependencies.py  schemas.py  utils.py  views.py  views.py.bak
api_v1/emails/: __init__.py  schemas.py  views.py
core/: config.py
core/cipher/: __init__.py  create_certs.md  crypt_utils.py  jwt-public.pem  rsa_public_local_secret.key  rsa_utils.py  utils.py
core/helpers/: __init__.py  db.py  db_helper.py
core/mixins/: __init__.py  profile.py  ul_email_password.py  user.py
core/models/: __init__.py  base.py  profile.py  settings.py  user.py
