[tool.poetry]
name = "f-data-zone-bk"
version = "0.1.0"
description = ""
authors = ["ZalivkoDenis <ZalivkoDenis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
