[tool.poetry]
name = "f-data-zone-bk"
version = "0.1.0"
description = ""
authors = ["ZalivkoDenis <ZalivkoDenis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
black = "^24.4.2"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
asyncio = "^3.4.3"
psycopg = "^3.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
